Fix search field cut-off on mobile

--- a/src/components/filter/Filter.css
+++ b/src/components/filter/Filter.css
@@ -16,6 +16,7 @@
 }
 
 .filter .input {
+  width: 100%;
   max-width: 500px;
   font-size: 1.6rem;
   flex-grow: 1;
